<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:orderInCategory="1"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_cancel"
        android:orderInCategory="2"
        android:title="@string/cancel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_make_bought"
        android:icon="@drawable/ic_bought2"
        android:orderInCategory="3"
        android:title="@string/make_bought"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_make_not_bought"
        android:icon="@drawable/ic_unbought"
        android:orderInCategory="4"
        android:title="@string/make_not_bought"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="5"
        android:title="@string/delete_selected"
        app:showAsAction="ifRoom" />
</menu>