<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorDarkBlue"
    >

    <ImageView
        android:id="@+id/list_item_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/ic_shop_item"
        android:contentDescription="@string/shop_list_item_picture"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:focusable="true"
        android:clickable="true"

        android:scaleType="centerInside"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        />


        <CheckBox
            android:id="@+id/is_bought_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/list_item_image"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"

            android:text="@string/is_bought"
            android:textColor="@android:color/white"

            tools:src="@drawable/ic_bought"
            />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/list_item_description_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/is_bought_checkbox"
        android:layout_centerHorizontal="true"
        style="@style/Widget.ShoppingListApp.TextInputLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/list_item_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"


            android:maxLines="5"
            android:inputType="textMultiLine"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_item_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_item_description_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:text="@string/save_button_label"
        android:textColor="@android:color/white"


        />





</RelativeLayout>